# kattis

./: CMakeLists.txt  README.md
kattis/: CMakeLists.txt
kattis/kattis-app/: CMakeLists.txt
kattis/kattis-app/src/: main.cpp
kattis/kattis-lib/: CMakeLists.txt
kattis/kattis-lib/include/kattis-lib/: library.h
kattis/kattis-tests/: CMakeLists.txt
kattis/kattis-tests/src/numbers/: numbers.cpp
project_name/: CMakeLists.txt
project_name/sample-app/: CMakeLists.txt
project_name/sample-app/src/: main.cpp
project_name/sample-lib/: CMakeLists.txt
project_name/sample-lib/src/: dummy.cpp
project_name/sample-tests/: CMakeLists.txt
project_name/sample-tests/src/numbers/: numbers.cpp
